# nexus-runtime

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  CHARTER.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKSIDE-EXAM.md  Dockerfile  LICENSE  README.md  SECURITY.md  nexus-runtime  pyproject.toml  sdkconfig.defaults  worklog.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
docs/: ARCHITECTURE_PLAN.md  HARDWARE_ROADMAP.md
docs/addenda/: pitfalls.md  review_checklist.md  safety_playbook.md
docs/planning/: BUILDER_SKILL_KIT.md  HIGH_LEVEL_SCHEMA.md  MIGRATION_PLAN.md  RESEARCH_FINDINGS.md  ROADMAP.md
docs/specs/: 00_MASTER_INDEX.md  ARCHITECTURE_DECISION_RECORDS.md  BUILD_GUIDE.md  build-specification.md
examples/: bytecode_playground.py  flocking_simulation.py  hardware_discovery.py  trust_scenario.py
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/drivers/: hal.c
firmware/main/: component.mk
firmware/nexus_vm/: CMakeLists.txt  vm_core.c  vm_opcodes.c  vm_validate.c
firmware/safety/: CMakeLists.txt  heartbeat.c  heartbeat.h  safety_sm.c  safety_sm.h  watchdog.c  watchdog.h
firmware/wire_protocol/: CMakeLists.txt  cobs.c  cobs.h  crc16.c  dispatch.c  dispatch.h  frame.c  frame.h  message.c  message.h
hardware/: __init__.py
hardware/arduino/: README.md  __init__.py  config_due.py  config_mega.py  config_mkr_wifi.py  config_nano.py  config_nano33_iot.py  config_uno.py  sensor_drivers.py  test_config_due.py  test_config_mega.py  test_config_mkr_wifi.py  test_config_nano.py  test_config_nano33_iot.py  test_config_uno.py  test_sensor_drivers.py
hardware/beaglebone/: README.md  __init__.py  cape_manager.py  config_ai64.py  config_black.py  pru_config.py
hardware/esp32/: __init__.py  config_esp32.py  config_esp32_c3.py  config_esp32_c6.py  config_esp32_h2.py  config_esp32_s3.py  wifi_mesh.py
hardware/esp8266/: README.md  __init__.py  config_d1_mini.py  config_esp8266.py  wifi_manager.py
hardware/imx_rt/: README.md  __init__.py  config_imxrt1050.py  config_imxrt1060.py  config_imxrt1064.py  config_imxrt1170.py  flexio_config.py
hardware/jetson_nano/: README.md  __init__.py  ai_pipeline.py  config_agx_orin.py  config_nano.py  config_orin_nano.py  config_orin_nx.py  config_tx2.py  config_xavier_nx.py
hardware/nrf52/: README.md  __init__.py  ble_profiles.py  config_nrf52810.py  config_nrf52832.py  config_nrf52840.py  config_nrf5340.py  mesh_config.py  test_ble_profiles.py  test_config_nrf52840.py
hardware/raspberry_pi/: README.md  __init__.py  config_cm4.py  config_pi3b.py  config_pi4.py  config_pi400.py  config_pi5.py  config_pico2.py  config_pizerow.py  sensor_hat.py
hardware/rp2040/: README.md  __init__.py  config_pico_w.py  config_rp2040.py  pio_programs.py  test_config_pico_w.py  test_config_rp2040.py  test_pio_programs.py
hardware/stm32/: README.md  __init__.py  can_bus.py  config_stm32f4.py  config_stm32h7.py  motor_control.py
hardware/teensy/: __init__.py  config_teensy36.py  config_teensy40.py  config_teensy41.py  usb_drivers.py
jetson/: __main__.py  requirements.txt  setup.py
jetson/adaptive_autonomy/: __init__.py  assessment.py  learning.py  levels.py  override.py  transition.py
jetson/agent/: __init__.py  aab_codec.py  fleet_simulation.py
jetson/agent_runtime/: a2a_opcodes.py  aab_codec.py
jetson/api_gateway/: __init__.py  auth.py  middleware.py  openapi.py  rate_limiter.py  router.py
jetson/comms_hub/: __init__.py  compression.py  encoding.py  protocol.py  qos.py  routing.py
jetson/compliance/: __init__.py  audit_trail.py  colregs.py  eu_ai_act.py  evidence.py  iec61508.py  regulatory.py
jetson/config_mgmt/: __init__.py  hot_reload.py  loader.py  schema.py  secrets.py  templates.py
jetson/cooperative_perception/: __init__.py  consensus_percept.py  fusion.py  quality.py  sharing.py  tracking.py
jetson/core/: schema_validator.py  test_schema_validator.py
jetson/data_pipeline/: __init__.py  aggregation.py  pipeline.py  storage.py  stream.py  transform.py
jetson/decision_engine/: __init__.py  group_decision.py  multi_objective.py  preference.py  uncertainty.py  utility.py
jetson/digital_twin/: __init__.py  environment.py  fault_sim.py  performance.py  physics.py  scenario.py  state_mirror.py
jetson/energy/: __init__.py  battery.py  forecasting.py  harvesting.py  load_shedding.py  mission_energy.py  power_budget.py
jetson/explainability/: __init__.py  attribution.py  counterfactual.py  decision_log.py  interpret.py  report.py
jetson/fleet_coordination/: __init__.py  communication.py  (+4 more)
nexus/: __init__.py  exceptions.py  lifecycle.py
schemas/: autonomy_state.json  node_role_config.json  reflex_definition.json  serial_protocol.json
shared/: instruction.h  opcodes.h  opcodes.py
tests/firmware/: CMakeLists.txt  test_cobs.c  test_crc16.c  test_frame.c  test_hal_integration.c  test_main.c  test_vm_opcodes.c  unity.h  unity_internals.h
(+549 files in other folders)
