[project]
name = "nexus-runtime"
version = "0.1.0"
description = "NEXUS distributed intelligence platform for marine robotics"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests/jetson"]
pythonpath = ["jetson"]
