[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-runtime"
version = "0.2.1"
description = "NEXUS distributed intelligence platform for marine robotics"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pyserial",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
nexus-cli = "jetson.__main__:main"

[project.urls]
GitHub = "https://github.com/nexus-runtime/nexus-runtime"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests", "hardware"]
pythonpath = ["jetson", "."]

[tool.coverage.run]
source = ["nexus", "jetson"]
